objects/Event__c/Event__c.object-meta.xml
<CustomObject>
    <description>Track and manage events for Tanium Customers and partners.</description>
    <label>Event</label>
    <nameField>
        <label>Event Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>