objects/Event__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <description>End Date and Time of the event</description>
    <label>End Date</label>
    <type>DateTime</type>
</CustomField>