objects/Event__c/fields/Event_Conference_Expired__c.field-meta.xml
<CustomField>
    <fullName>Event_Conference_Expired__c</fullName>
    <description>ss-9182: used as a criteria on Event/Conference lookup field on ISR object</description>
    <formula>TODAY() &gt; DATEVALUE(End_Date__c)+14</formula>
    <label>Event/Conference Expired</label>
    <type>Checkbox</type>
</CustomField>