objects/Event__c/fields/Event_Type__c.field-meta.xml
<CustomField>
    <fullName>Event_Type__c</fullName>
    <description>Identify the type of event being held</description>
    <label>Event Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Webinar</fullName>
            </value>
            <value>
                <fullName>Conference</fullName>
            </value>
            <value>
                <fullName>Trade Show</fullName>
            </value>
            <value>
                <fullName>Customer Appreciation</fullName>
            </value>
            <value>
                <fullName>User Group Meet Up</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>