objects/Event__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <description>General location of the event (e.g. Hilton Hotel)</description>
    <label>Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>