objects/Event__c/fields/Location_City__c.field-meta.xml
<CustomField>
    <fullName>Location_City__c</fullName>
    <description>City where the event is being held</description>
    <label>Location City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>