objects/Event__c/fields/Objective__c.field-meta.xml
<CustomField>
    <fullName>Objective__c</fullName>
    <description>Why is the event being held or what this the value to Tanium?</description>
    <label>Objective</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Brand Promotion</fullName>
            </value>
            <value>
                <fullName>Customer Eduction</fullName>
            </value>
            <value>
                <fullName>Revenue Generation</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>