objects/Event__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>Start date and time of the event</description>
    <label>Start Date</label>
    <type>DateTime</type>
</CustomField>