objects/Event__c/fields/Website__c.field-meta.xml
<CustomField>
    <fullName>Website__c</fullName>
    <description>Website for the event</description>
    <label>Website</label>
    <type>Url</type>
</CustomField>