objects/Event__c/listViews/Andrea_Test.listView-meta.xml
<ListView>
    <fullName>Andrea_Test</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <label>Andrea - Test</label>
</ListView>